Add phone video

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <header class="header">
         <h1 class="white title">Discover hidden places in the world around you</h1>
         <h6><a>Download Excursion (Coming soon!)</a></h6>
+        <video autoplay="autoplay">
+            <source src="./resources/videos/excursion.mp4" type="video/mp4">
+        </video>
     </header>
 </body>
 </html>
