Add body Add Ending Add Footer Finish Project

--- a/index.html
+++ b/index.html
@@ -15,5 +15,18 @@
             <source src="./resources/videos/excursion.mp4" type="video/mp4">
         </video>
     </header>
+    <div class="content">
+        <h1 class="white content-title">Your personal travel guide</h1>
+        <h3 class="content-text">Excursion remembers places you like, and recommends new points of interest around you.</h3>
+        <p><img src="https://content.codecademy.com/programs/freelance-one/excursion/images/camp.jpg"/></p>
+    </div>
+    <div class="bottom">
+        <p><img src="https://content.codecademy.com/programs/freelance-one/excursion/images/phone.png"/></p>
+        <h1 class="white">Coming soon for iPhone and Android</h1>
+        <h6><a>Download Excursion (Coming soon!)</a></h6>
+    </div>
+    <footer class="footer">
+        <p>© Excursion</p>
+    </footer>
 </body>
 </html>
